<?xml version="1.0"?>
<package format="2">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>The robot_bringup package</description>

  <maintainer email="peak@todo.todo">peak</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>

</package>
