<?xml version="1.0"?>
<package>
    <name>robot_node</name>
    <version>0.1.0</version>
    <description>The robot_description package</description>

    <maintainer email="peak@todo.todo">peak</maintainer>

    <license>Apache 2.0</license>


    <author>maxu</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>

    <build_depend>ecl_exceptions</build_depend>
    <build_depend>ecl_sigslots</build_depend>
    <build_depend>ecl_streams</build_depend>
    <build_depend>ecl_threads</build_depend>

    <build_depend>controller_manager</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>realtime_tools</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>urdf</build_depend>

    <build_depend>robot_driver</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>pluginlib</run_depend>

    <run_depend>ecl_exceptions</run_depend>
    <run_depend>ecl_sigslots</run_depend>
    <run_depend>ecl_streams</run_depend>
    <run_depend>ecl_threads</run_depend>

    <run_depend>controller_manager</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>realtime_tools</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>urdf</run_depend>

    <run_depend>robot_driver</run_depend>

    <export>
        <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
    </export>
  
</package>
