<?xml version="1.0"?>
<package>
    <name>ros_test</name>
    <version>0.1.0</version>
    <description>The robot_description package</description>

    <maintainer email="peak@todo.todo">peak</maintainer>

    <license>Apache 2.0</license>


    <author>maxu</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>

    <build_depend>ecl_threads</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>pluginlib</run_depend>

    <run_depend>ecl_threads</run_depend>

    <export>
        <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
    </export>
  
</package>
